# Year1-CPP-Project

./: CMakeLists.txt  Commands.cpp  Commands.h  FileHandler.cpp  FileHandler.h  Item.cpp  Item.h  LICENSE  Logs.cpp  Logs.h  MainLoop.cpp  MainLoop.h  Order.cpp  Order.h  README.md  Shopper.cpp  Shopper.h  Simulation.cpp  Simulation.h  Stock.cpp  Stock.h  main.cpp
